Showtime API tests